# latexmk

./: .gitignore  LICENSE  README.rst  pyproject.toml
src/: config.py
src/latexmk/: __main__.py  build.py  datetimeutil.py  shutil.py
src/latexmk/config/: global.py  project.py  user.py
src/latexmk/config/project/: __init__.py  tree.py
src/latexmk/config/project/main/: aux.py  tex.py
src/latexmk/config/project/tree/: __init__.py  get.py  set.py
src/latexmk/config/project/tree/get/: v0.py  v1.py  v1test.py
