[build-system]
    requires = ["setuptools >= 77.0.3"]
    build-backend = "setuptools.build_meta"

#[build-system]
#    requires = ["hatchling >= 1.26"]
#    build-backend = "hatchling.build"

[project]
    name = "latexmk"
    version = "0.0.3"
    authors = [
        { name="Jacob Striebel" },
    ]
    description = "Tool for building a latex project"
    readme = "README.rst"
    requires-python = ">=3.8"
    classifiers = [
        "Programming Language :: Python :: 3",
        "Operating System :: POSIX :: Linux",
    ]
    license = "MIT"
    license-files = ["LICEN[CS]E*"]
    dependencies = ["pygments>=2,<3"]
    
[project.urls]
    Homepage = "https://github.com/striebel/latexmk"
